# agent-brain

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.cursor/: mcp.json  mcp.json.example
.cursor/rules/: agent-brain.mdc
.github/: agent-brain-mode.md
.github/actions/setup-protoc/: action.yml
.github/pipelines/: ci.yml  pipeline.yml
.github/workflows/: ci.yml  release.yml  reusable-build.yml  stage-build.yml  stage-onnx-bench.yml  stage-release-publish.yml  stage-skills-sh-eval.yml  stage-test.yml
agent-brain/: Cargo.toml  README.md  build.rs  config.example.yaml
agent-brain/benches/: route_task.rs
agent-brain/docs/: concurrency.md
agent-brain/eval/: queries.jsonl  task-scoped.jsonl  transcript-queries.jsonl
agent-brain/hooks/: agent-brain-hooks.json  route_gate.py  test_route_gate.py
agent-brain/hooks/opencode/: route-gate.ts
agent-brain/proto/agent_brain/v1/: routing.proto
agent-brain/registry/: manifest.json  packages.json  utilities.json  workflows.json
agent-brain/registry/autonomic-core/.cursor/skills/find-skills/: SKILL.md
agent-brain/registry/autonomic-core/.cursor/skills/rmcp-mcp-gateway/: SKILL.md
agent-brain/registry/supervisor/.cursor/rules/: execution-supervisor.mdc
agent-brain/registry/supervisor/.cursor/skills/execution-supervisor/: SKILL.md
agent-brain/registry/supervisor/.cursor/skills/token-efficient-ops/: SKILL.md
agent-brain/registry/workflows/: mcp-health-check.yaml
agent-brain/src/: adoption.rs  ast_indexer.rs  auto_update.rs  autowire.rs  beam_eval.rs  bench.rs  bridge.rs  cache.rs  config.rs  dataset.rs  dataset_pipeline.rs  distill.rs  doctor.rs  embed.rs  engine.rs  eval.rs  fixture.rs  gc.rs  git_tools.rs  global_workspace.rs  graphify_bench.rs  host_hooks.rs  host_install.rs  index.rs  install.rs  lib.rs  log.rs  main.rs  mcp_activity.rs  mcp_federation.rs  memory_gc.rs  node_context.rs  observability.rs  observation.rs  onboarding.rs  operator_digest.rs  proofs.rs  registry_sync.rs  repo_snapshot.rs  retrieval.rs  (+14 more)
agent-brain/src/db/: latency.rs  migrations.rs  mod.rs  store.rs  write_handler.rs  write_queue.rs
agent-brain/src/docs/: allowlist.rs  fetch.rs  learn.rs  mod.rs
agent-brain/src/graphify/: ingest.rs  mod.rs
agent-brain/src/grpc/: convert.rs  mod.rs  server.rs
agent-brain/src/intelligence/: apply_when.rs  mod.rs
agent-brain/src/mcp/: mod.rs  route_gate.rs  server.rs
agent-brain/src/sessions/: digest.rs  mod.rs
agent-brain/src/sync/: bundle.rs  cloud.rs  git.rs  mod.rs
agent-brain/src/upstream/: client.rs  suggest.rs
agent-brain/tests/: phase1.rs  v0_10.rs  v0_22.rs  v0_23.rs  v0_24.rs  v0_30.rs  v0_4.rs  v0_5.rs  v0_6.rs  v0_7.rs  v0_8.rs  v0_9.rs
docs/: USAGE.md  host-integration.md  orchestrator-contract.md
docs/architecture/: 10-concurrency-and-performance.md  11-decisions-log.md  12-routing-accuracy.md  13-proofs-and-benchmarks.md  15-kernel-overhaul.md  README.md
docs/benchmarks/: README.md  latest.json  onnx-latest.json  skills-sh-latest.json  supervisor-latest.json
docs/registry/: README.md
scripts/: build-release-macos.sh  install.sh  sign-macos.sh
(+4 files in other folders)
