[package]
name = "agent-brain"
version = "0.28.3"
edition = "2021"
description = "Fast local MCP router for agents, skills, rules, and memory"
license = "MIT"
repository = "https://github.com/aeswibon/agent-brain"
readme = "README.md"
keywords = ["mcp", "cursor", "agent", "router"]
categories = ["command-line-utilities"]
build = "build.rs"

[[bin]]
name = "agent-brain"
path = "src/main.rs"

[dependencies]
agent-body-core = { git = "https://github.com/autonomic-ai-dev/agent-body" }
age = "0.11"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
fastembed = "4"
glob = "0.3"
keyring = "3"
opendal = { version = "0.52", features = ["services-s3", "services-fs", "layers-blocking"] }
lru = "0.16.3"
prost = "0.13"
regex = "1"
rmcp = { version = "1.5.1", features = ["server", "transport-io", "macros", "client", "transport-child-process"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
secrecy = "0.10"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zstd = "0.13"
tempfile = "3"
tree-sitter = "0.24"
tree-sitter-rust = { git = "https://github.com/tree-sitter/tree-sitter-rust" }
tree-sitter-typescript = { git = "https://github.com/tree-sitter/tree-sitter-typescript" }
tree-sitter-python = { git = "https://github.com/tree-sitter/tree-sitter-python" }
tree-sitter-go = { git = "https://github.com/tree-sitter/tree-sitter-go" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
tonic = "0.12"
prost = "0.13"

[[bench]]
name = "route_task"
harness = false
